@@ -1,4 +1,12 @@
-2003-02-17  Ross Burton  <ross@burtonini.com>
+2003-02-18  Ross Burton  <ross@burtonini.com>
+
+	* src/dh-parser.c (parser_end_node_cb): Reverse the nodes which
+	were backwards, as they were appended for speed.
+
+	* src/dh-base.c (base_init_books): Look in
+	/usr/share/gtk-doc/html/ and ~/.devhelp2/books/ for books.
+
+2003-02-17  Ross Burton  <ross@burtonini.com>	
 
 	* src/dh-base.c (base_init_books): Search DEVHELP_SEARCH_PATH for
 	books.
